[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player/Gun.gd" type="Script" id=2]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=3]

[node name="Gun" type="Node2D"]
script = ExtResource( 2 )
bullet_scene = ExtResource( 3 )
ACC_RADIUS = 5.0

[node name="Gun" type="Sprite" parent="."]
scale = Vector2( 0.358528, 0.151602 )
texture = ExtResource( 1 )

[node name="DebugLine1" type="Line2D" parent="."]
visible = false
scale = Vector2( 0.358528, 0.151602 )
points = PoolVector2Array( 0, 0, 1000, 0 )
width = 4.0
default_color = Color( 1, 0, 0, 1 )
antialiased = true

[node name="DebugLine2" type="Line2D" parent="."]
visible = false
scale = Vector2( 0.358528, 0.151602 )
points = PoolVector2Array( 0, 0, 1000, 0 )
width = 4.0
default_color = Color( 1, 0, 0, 1 )
antialiased = true

[node name="BulletTimer" type="Timer" parent="."]
one_shot = true

[node name="RecoilTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="RadiusDebug" type="Label" parent="."]
margin_left = -0.630676
margin_top = -14.0
margin_right = 150.369
margin_bottom = 9.53674e-07
rect_scale = Vector2( 0.5, 0.5 )
text = "Radius: "
__meta__ = {
"_edit_use_anchors_": false
}
